--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="button_send">Photos</string>
     <string name="get_Contacts">Contacts</string>
     <string name="get_SMS">SMSs</string>
-    
+    <string name="label">BakkArbeit</string>
+    <string name="title_activity_login_register">LoginRegisterActivity</string>
+    <string name="title_activity_photos">PhotosActivity</string>
 
 </resources>
